// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders the basic <Header /> with a background 1`] = `
<div
  class="header__Background-djltcn-0 krkBaF"
  data-testid="header-bg"
>
  <div
    class="header__Container-djltcn-1 gWMypV"
  >
    <p
      class="header__Link-djltcn-2 kcTFkV"
    >
      Hello I am a link!
    </p>
  </div>
</div>
`;

exports[`<Header /> renders the basic <Header /> without a background 1`] = `
<div
  class="header__Container-djltcn-1 gWMypV"
>
  <p
    class="header__Link-djltcn-2 jsleqd"
  >
    Hello I am a link!
  </p>
</div>
`;

exports[`<Header /> renders the full <Header> with a background 1`] = `
<div
  class="header__Background-djltcn-0 cPcXTS"
  data-testid="header-bg"
  src="joker1"
>
  <div
    class="header__Container-djltcn-1 gWMypV"
  >
    <div
      class="header__Group-djltcn-3 hAmgWk"
    >
      <p
        class="header__Link-djltcn-2 jsleqd"
      >
        Series
      </p>
      <p
        class="header__Link-djltcn-2 jsleqd"
      >
        Films
      </p>
    </div>
    <div
      class="header__Group-djltcn-3 hAmgWk"
    >
      <div
        class="header__Search-djltcn-5 kEDhSA"
      >
        <button
          class="header__SearchIcon-djltcn-6 fZVBWV"
          data-testid="search-click"
        >
          <img
            alt="Search"
            src="/images/icons/search.png"
          />
        </button>
        <input
          class="header__SearchInput-djltcn-4 bPqNLb"
          data-testid="search-input"
          placeholder="Search films and series"
          value="Joker"
        />
      </div>
      <div
        class="header__Profile-djltcn-10 kVuknk"
      >
        <button
          class="header__Picture-djltcn-8 isIzhY"
          src="/images/users//images/karl.png.png"
        />
        <div
          class="header__Dropdown-djltcn-9 hSQScP"
        >
          <div
            class="header__Group-djltcn-3 hAmgWk"
          >
            <button
              class="header__Picture-djltcn-8 isIzhY"
              src="/images/users//images/karl.png.png"
            />
            <p
              class="header__Link-djltcn-2 jsleqd"
            >
              Salah
            </p>
          </div>
          <div
            class="header__Group-djltcn-3 hAmgWk"
          >
            <p
              class="header__Link-djltcn-2 jsleqd"
            >
              Sign out
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="header__Container-djltcn-1 header__Feature-djltcn-11 gWMypV kzzUIw"
  >
    <h2
      class="header__FeatureCallOut-djltcn-12 UDRwT"
    >
      Watch Joker Now
    </h2>
    <p
      class="header__Text-djltcn-13 gGXzIj"
    >
      Forever alone in a crowd...
    </p>
    <button
      class="header__PlayButton-djltcn-15 SxCeS"
    >
      Play
    </button>
  </div>
</div>
`;
